# nav-onboarding-2025

./: README.md
environment/: generate-ssh.sh  set-git-user.sh
environment/Docker/: install_script.sh
environment/macOS VM/: README.md  install_script.sh
pizza_bot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
pizza_bot/include/: pizza_bot_controller.h
pizza_bot/pizza_bot/: pizza_bot_controller.py
pizza_bot/src/: main.cpp  pizza_bot_controller.cpp
pizza_bot_infrastructure/: CMakeLists.txt  package.xml
pizza_bot_infrastructure/config/: navigator_params.yaml  order_publisher_params.yaml  orders.json  restaurant_params.yaml
pizza_bot_infrastructure/include/: customer.h  navigator.h  order_publisher.h  restaurant.h
pizza_bot_infrastructure/launch/: pizza_bot_infrastructure_launch.py
pizza_bot_infrastructure/src/: customer.cpp  navigator.cpp  order_publisher.cpp  restaurant.cpp  run_customer.cpp  run_navigator.cpp  run_order_publisher.cpp  run_restaurant.cpp
pizza_bot_interfaces/: CMakeLists.txt  package.xml
pizza_bot_interfaces/action/: MakePizza.action
pizza_bot_interfaces/msg/: Order.msg
pizza_bot_interfaces/srv/: DeliverPizza.srv  NavigateToCoord.srv
